.metadata/.plugins/org.eclipse.cdt.ui/GPIO.build.log
16:24:03 **** Incremental Build of configuration Debug for project GPIO ****
make all 
Building file: ../GPIO.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega2560 -DF_CPU=16000000UL -MMD -MP -MF"GPIO.d" -MT"GPIO.d" -c -o "GPIO.o" "../GPIO.cpp"
In file included from ../GPIO.h:9:0,
                 from ../GPIO.cpp:8:
/usr/lib/avr/include/util/delay.h:95:3: warning: #warning "Compiler optimizations disabled; functions from <util/delay.h> won't work as designed" [-Wcpp]
 # warning "Compiler optimizations disabled; functions from <util/delay.h> won't work as designed"
   ^
../GPIO.cpp: In member function ‘void GPIO::setMode(GPIO::PortDirection_t)’:
../GPIO.cpp:81:15: error: invalid operands of types ‘volatile uint8_t* {aka volatile unsigned char*}’ and ‘int’ to binary ‘operator|’
  if(dir) _ddr |= (1<<_bit);
               ^
../GPIO.cpp:81:15: error:   in evaluation of ‘operator|=(volatile uint8_t* {aka volatile unsigned char*}, int)’
../GPIO.cpp:82:12: error: invalid operands of types ‘volatile uint8_t* {aka volatile unsigned char*}’ and ‘int’ to binary ‘operator&’
subdir.mk:18: recipe for target 'GPIO.o' failed
  else _ddr &= ~(1<<_bit);
            ^
../GPIO.cpp:82:12: error:   in evaluation of ‘operator&=(volatile uint8_t* {aka volatile unsigned char*}, int)’
../GPIO.cpp: In member function ‘bool GPIO::read()’:
../GPIO.cpp:91:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
make: *** [GPIO.o] Error 1

16:24:03 Build Finished (took 58ms)

